Fix mypy errors and black reformat

--- a/mypy.ini
+++ b/mypy.ini
@@ -53,3 +53,9 @@ ignore_missing_imports = True
 
 [mypy-spacy.*]
 ignore_missing_imports = True
+
+[mypy-botok.*]
+ignore_missing_imports = True
+
+[mypy-utoken.*]
+ignore_missing_imports = True
